# synthdrive

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: limitations.md  methodology_v01.md
examples/: generate_core_dataset.py  glm_comparison.py  glm_comparison_v2.py  validation_report.py
output/: constraint_report.txt  glm_comparison.csv  glm_comparison_v2.csv  validation_report.txt  validation_summary.txt
scripts/: glm_coef_plot.py  glm_table_sparkline.py
synthdrive/: __init__.py  generate.py
synthdrive/claims/: frequency.py  premium.py  severity.py
synthdrive/data/: load_seed.py  schema.py
synthdrive/features/: constraints.py  copula.py  sampler.py  transforms.py
synthdrive/presets/: core.py  jp.py
synthdrive/validate/: diagnostics.py  plots.py  report.py
tests/: conftest.py  test_constraints.py  test_frequency.py  test_generate.py  test_severity.py  test_validation.py
