[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthdrive"
version = "0.1.0"
description = "Actuarially structured synthetic telematics dataset generator"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
    "telematics",
    "insurance",
    "synthetic-data",
    "usage-based-insurance",
    "actuarial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synthdrive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
